--- a/module/Associate/view/template/employee/dashboard.phtml
+++ b/module/Associate/view/template/employee/dashboard.phtml
@@ -3,12 +3,11 @@
         <div class="col-md-9">
             <div class="span4">
                 <blockquote>
-                    <p>Welcome <?php echo $user->firstname.' '.$user->lastname; ?>!</p>
-                    <small><cite title="Source Title"><?php echo $user->state.', '.$user->country; ?>  <i class="glyphicon glyphicon-map-marker"></i></cite></small>
+                    <p>Welcome <?php echo $employee->firstname.' '.$employee->lastname; ?>!</p>                    
                 </blockquote>
                 <p>
-                    <i class="glyphicon glyphicon-envelope"></i> <?php echo $user->email; ?> <br>
-                    <i class="glyphicon glyphicon-time"></i> Since <?php echo $this->dateFormat(new DateTime($user->createdat), IntlDateFormatter::LONG,IntlDateFormatter::MEDIUM); ?>
+                    <i class="glyphicon glyphicon-envelope"></i> <?php echo $employee->email; ?> <br>
+                    <i class="glyphicon glyphicon-time"></i> Since <?php echo $this->dateFormat(new DateTime($employee->createdat), IntlDateFormatter::LONG,IntlDateFormatter::MEDIUM); ?>
                 </p>
             </div>
         </div>
