--- a/module/Associate/view/template/employer/employeeadd.phtml
+++ b/module/Associate/view/template/employer/employeeadd.phtml
@@ -1,3 +1,21 @@
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+<script type="text/javascript">
+    $(function() {
+        $("#dob").datepicker({
+            changeMonth: true,
+            changeYear: true,
+            dateFormat: 'yy-mm-dd'
+        });
+        $("#doj").datepicker({
+            changeMonth: true,
+            changeYear: true,
+            dateFormat: 'yy-mm-dd'
+        });
+    });
+    
+</script>
 <div class="row">
     <div class="col-md-9">
         <h1 class="page-title">Add Employee</h1>
