--- a/module/Associate/view/template/employee/changepic.phtml
+++ b/module/Associate/view/template/employee/changepic.phtml
@@ -1,19 +1,19 @@
 <div class="row">
     <div class="col-md-9">
-        <h1 class="page-title">Update profile picture</h1>
+        <h1 class="page-title">Change logo</h1>
         <div class="page-body">
-            <form class="form-horizontal" role="form" method="post" enctype="multipart/form-data" action="<?php echo $this->serverUrl($this->url('jobseeker', array('action'=>'changepic'))); ?>">
+            <form class="form-horizontal" role="form" method="post" enctype="multipart/form-data" action="<?php echo $this->serverUrl($this->url('employee', array('action'=>'changelogo'))); ?>">
                 <input type="hidden" name="id" value="<?php echo $id; ?>" />
                 <div class="form-group">
-                    <label for="password" class="col-md-3 control-label">Upload picture</label>
+                    <label for="password" class="col-md-3 control-label">Upload Logo</label>
                     <div class="col-md-5">
-                        <input type="file"  name="picture" value="" placeholder="Upload Picture" />
+                        <input type="file"  name="picture" value="" placeholder="Upload Logo" />
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-3 col-md-5">
                         <button id="btn-signup" type="submit" class="btn btn-primary"><i class="icon-hand-right"></i>
-                            Upload
+                            &nbsp Upload
                         </button>
                     </div>
                 </div>
